collectionId user içine alındı . UserId collection içinden çıkarıldı. düzenlemeler yapıldı